# Kallisto

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  WHITEPAPER.md  benchmark.md  docker-compose.yml  feature_request.md  vcpkg.json
.agents/skills/clean-code/: SKILL.md
.agents/skills/test-writing/: SKILL.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.gemini/: settings.json
.github/workflows/: alpha-publish.yml  docker-publish.yml  main-publish.yml
.idx/: dev.nix
ISSUE_TEMPLATE/: bug_report.md
bench/: bench_grpc_client.cpp  run_ghz.sh  run_remote_bench.sh  run_server_bench.sh  wrk_get.lua  wrk_mixed.lua  wrk_put.lua  wrk_seed.lua
benchmarks/: README.md  bench_dos.cpp  bench_multithread.cpp
benchmarks/core/: bench_throughput.cpp
benchmarks/server/: run_server_bench.sh
benchmarks/server/workloads/: wrk_get.lua  wrk_mixed.lua  wrk_put.lua  wrk_seed.lua
custom-triplets/: x64-linux.cmake
docker/: entrypoint.sh
docs/: 1.0.0-v2-implementation-plan.md  1.0.0-v2-walkthrough.md  20260215_implementation_plan.md  20260215_walkthrough.md  b-tree_envoy_style_impl_plan.md  crash_cuckoo_table_fix.md  envoy_style_server_plan.md  envoy_threading_architecture.md  features_v3.md  rocksDB_impl_plan.md  server_implementation_plan.md  tests.v2.md
docs/benchmarks/: 09032026_kallisto_6cores_BareMetal_1container.md  09032026_kallisto_6cores_BareMetal_networkBridge.md  20260310_kallisto_6cores_BareMetal_HostNetwork.md
docs/impl_plans/: 20260215_implementation_plan.md  20260215_task.md  20260314_cuckooTable_tuning.md  UDS_unified_interface.md  b-tree_envoy_style_impl_plan.md
docs/known_fatal_bugs/: blocked_cuckoo_hash.md
docs/walkthroughs/: P1_btree_envoy_style_walkthrough.md
docs/wikis/: Kallisto_TuningCuckCooTable.md
documents/: TODO.md  WHITEPAPER.md
include/kallisto/: btree_index.hpp  cuckoo_table.hpp  kallisto.hpp  kallisto_core.hpp  kallisto_engine.hpp  logger.hpp  rocksdb_storage.hpp  sharded_cuckoo_table.hpp  siphash.hpp  storage_engine.hpp  tls_btree_manager.hpp
include/kallisto/engine/: engine_concept.hpp  engine_registry.hpp  i_secret_engine.hpp  kv_engine.hpp  lock_free_queue.hpp
include/kallisto/event/: dispatcher.hpp  worker.hpp
include/kallisto/net/: listener.hpp
include/kallisto/server/: grpc_handler.hpp  http_handler.hpp  uds_admin_handler.hpp
include/kallisto/thread_local/: thread_local.hpp
proto/: kallisto.proto
samples/: logical_passthrough.go
src/: btree_index.cpp  cli.cpp  cuckoo_table.cpp  kallisto.cpp  kallisto_core.cpp  kallisto_engine.cpp  kallisto_server.cpp  main.cpp  rocksdb_storage.cpp  sharded_cuckoo_table.cpp  siphash.cpp  storage_engine.cpp  test_btree_index.cpp  test_cuckoo_table.cpp  test_kallisto_core.cpp  test_kallisto_server.cpp  test_main.cpp  test_rocksdb_storage.cpp  test_sharded_cuckoo_table.cpp  test_siphash.cpp  tls_btree_manager.cpp
src/engine/: engine_registry.cpp  kv_engine.cpp  test_engine_registry.cpp  test_kv_engine.cpp
src/event/: dispatcher_impl.cpp  test_dispatcher.cpp  test_threading.cpp  test_worker.cpp  worker_impl.cpp
src/net/: listener.cpp  test_listener.cpp
src/server/: grpc_handler.cpp  http_handler.cpp  test_http_handler.cpp  uds_admin_handler.cpp
src/thread_local/: test_thread_local.cpp  thread_local_impl.cpp
tests/: bench_dos.cpp  bench_multithread.cpp  bench_p99.cpp  repro_crash.cpp  test_btree_rcu.cpp  test_kallisto_core.cpp  test_kallisto_engine.cpp  test_listener.cpp  test_main.cpp  test_persistence.sh  test_rocksdb.cpp  test_sharded_cuckoo.cpp  test_threading.cpp  test_uds_admin.cpp
